--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,6 +15,6 @@
   ],
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#F4F5F4",
+  "background_color": "#616161",
   "theme_color": "#9CFAA0"
 }
